[tool.poetry]
name = "stellargui"
version = "0.1.0"
description = "stellar wallet"
authors = ["xmonader <xmonader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
stellar-sdk = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stellargui = 'stellargui:stellargui.run'